Refactor: Implement CRUD operations for posts and categories (main)
Rename `category` and `order` fields in
`UpdateCategoryRequest` to `name` and `orderNum`.
Implement CRUD operations for posts and categories in
`PrivateService`. Update tests for `PrivateService`,
`ArgumentValidatorImpl`, and `AdminController`. This
improves code consistency and provides basic backend
functionality.