@@ -1,15 +1,14 @@
 package park.bumsiku.service;
 
-import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.web.multipart.MultipartFile;
 import park.bumsiku.domain.dto.request.CreatePostRequest;
+import park.bumsiku.domain.dto.response.CategoryResponse;
 import park.bumsiku.domain.dto.response.PostResponse;
 import park.bumsiku.domain.dto.request.UpdateCategoryRequest;
 import park.bumsiku.domain.dto.request.UpdatePostRequest;
@@ -22,13 +21,19 @@ import park.bumsiku.repository.CommentRepository;
 import park.bumsiku.repository.PostRepository;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.NoSuchElementException;
 
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.BDDMockito.mock;
-import static org.mockito.Mockito.*;
+import static org.assertj.core.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 public class PrivateServiceTest {
@@ -42,78 +47,164 @@ public class PrivateServiceTest {
     @Mock
     private PostRepository postRepository;
 
-//    @Mock
-//    private PostImageRepository imageRepository;
-
-    @Mock
-    private MultipartFile mockMultipartFile;
-
     @InjectMocks
     private PrivateService privateService;
 
-    @Captor
-    private ArgumentCaptor<Category> categoryCaptor;
+    // Test data
+    private Category techCategory;
+    private Category lifeCategory;
+    private LocalDateTime now;
 
-    @Captor
-    private ArgumentCaptor<Post> postCaptor;
+    @BeforeEach
+    void setUp() {
+        // Create test categories
+        now = LocalDateTime.now();
+        techCategory = new Category(1, "Tech", 1, now);
+        lifeCategory = new Category(2, "Life", 2, now);
+        List<Category> categories = new ArrayList<>();
+        categories.add(techCategory);
+        categories.add(lifeCategory);
+    }
 
 //    @Captor
 //    private ArgumentCaptor<PostImage> postImageCaptor;
 
-    @Test
-    void updateCategory_shouldInsertOrUpdateAndReturnResponse() {
-        UpdateCategoryRequest request = new UpdateCategoryRequest(1, "Updated Tech", 1);
-        Category savedCategory = new Category(1, request.getCategory(), request.getOrder(), LocalDateTime.now());
+    // Helper methods for creating test data
+    private Category createCategory(Integer id, String name, Integer orderNum) {
+        return new Category(id, name, orderNum, LocalDateTime.now());
+    }
 
-        given(categoryRepository.insert(any(Category.class))).willReturn(savedCategory);
-        given(categoryRepository.update(any(Category.class))).willReturn(0);
+    private Post createPost(Integer id, String title, String content, String summary, Category category) {
+        LocalDateTime now = LocalDateTime.now();
+        return Post.builder()
+                .id(id)
+                .title(title)
+                .content(content)
+                .summary(summary)
+                .category(category)
+                .createdAt(now)
+                .updatedAt(now)
+                .state("published")
+                .build();
+    }
 
-        var result = privateService.updateCategory(request);
+    private Post createPost(Integer id, String title, String content, String summary, Category category, 
+                           LocalDateTime createdAt, LocalDateTime updatedAt) {
+        return Post.builder()
+                .id(id)
+                .title(title)
+                .content(content)
+                .summary(summary)
+                .category(category)
+                .createdAt(createdAt)
+                .updatedAt(updatedAt)
+                .state("published")
+                .build();
+    }
 
-        Assertions.assertNotNull(result);
-        Assertions.assertEquals(savedCategory.getId().intValue(), result.getId());
-        Assertions.assertEquals(request.getCategory(), result.getName());
-        Assertions.assertEquals(request.getOrder(), result.getOrderNum());
-        Assertions.assertEquals(savedCategory.getCreatedAt(), result.getCreatedAt());
+    private Comment createComment(Long id, Post post, String authorName, String content) {
+        return new Comment(id, post, authorName, content, LocalDateTime.now());
+    }
+
+    private void assertPostResponseMatchesPost(PostResponse response, Post post) {
+        assertThat(response)
+            .isNotNull()
+            .extracting("id", "title", "content")
+            .containsExactly(
+                post.getId(),
+                post.getTitle(),
+                post.getContent()
+            );
+
+        assertEquals(post.getCreatedAt().toString(), response.getCreatedAt());
+        assertEquals(post.getUpdatedAt().toString(), response.getUpdatedAt());
+    }
+
+    private void verifyPostFields(Post post, Integer id, String title, String content, String summary, Category category) {
+        assertEquals(id, post.getId());
+        assertEquals(title, post.getTitle());
+        assertEquals(content, post.getContent());
+        assertEquals(summary, post.getSummary());
+        assertEquals(category, post.getCategory());
     }
 
     @Test
+    @DisplayName("updateCategory should insert or update category and return response")
+    void updateCategory_shouldInsertOrUpdateAndReturnResponse() {
+        // given
+        String updatedName = "Updated Tech";
+        UpdateCategoryRequest request = new UpdateCategoryRequest(techCategory.getId(), updatedName, 3);
+
+        Category updatedCategory = new Category(techCategory.getId(), updatedName, 3, now);
+
+        // Mock repository behavior
+        when(categoryRepository.update(any(Category.class))).thenReturn(1); // Simulate successful update
+        when(categoryRepository.findById(techCategory.getId())).thenReturn(updatedCategory);
+
+        // when
+        var result = privateService.updateCategory(request);
+
+        // then
+        assertThat(result)
+            .isNotNull()
+            .extracting("id", "name", "orderNum")
+            .containsExactly(
+                techCategory.getId(),
+                updatedName,
+                3
+            );
+
+        // Verify the mock was called
+        verify(categoryRepository).update(any(Category.class));
+        verify(categoryRepository).findById(techCategory.getId());
+    }
+
+    @Test
+    @DisplayName("deleteComment should delete comment when comment exists")
     void deleteComment_whenCommentExists_shouldDeleteSuccessfully() {
         // given
-        long commentId = 1L;
-        Post mockPost = mock(Post.class);
-        Comment existingComment =
-                new Comment(
-                        commentId,      // Long id
-                        mockPost,       // Post post
-                        "tester",       // String authorName
-                        "hello world",  // String content
-                        LocalDateTime.now()
-                );
+        // Create a post
+        Post post = Post.builder()
+                .id(1)
+                .title("Test Title")
+                .content("Test Content")
+                .summary("Test Summary")
+                .category(techCategory)
+                .state("published")
+                .build();
 
-        given(commentRepository.findById(commentId)).willReturn(existingComment);
-        doNothing().when(commentRepository).delete(existingComment.getId());
+        // Create a comment
+        long commentId = 1L;
+        Comment comment = new Comment(commentId, post, "tester", "hello world", now);
+
+        // Mock repository behavior
+        when(commentRepository.findById(commentId)).thenReturn(comment);
+        doNothing().when(commentRepository).delete(commentId);
 
         // when
         privateService.deleteComment(String.valueOf(commentId));
 
         // then
+        // Verify the mock was called
         verify(commentRepository).findById(commentId);
-        verify(commentRepository).delete(existingComment.getId());
+        verify(commentRepository).delete(commentId);
     }
 
     @Test
+    @DisplayName("deleteComment should throw NoSuchElementException when comment does not exist")
     void deleteComment_whenCommentNotExists_shouldThrowException() {
-        long commentId = 999L;
-        given(commentRepository.findById(commentId)).willReturn(null);
+        // given
+        long nonExistentCommentId = 999L;
 
-        Assertions.assertThrows(
-                NoSuchElementException.class,
-                () -> privateService.deleteComment(String.valueOf(commentId))
-        );
+        // Mock repository behavior
+        when(commentRepository.findById(nonExistentCommentId)).thenReturn(null);
 
-        verify(commentRepository).findById(commentId);
-        verify(commentRepository, never()).delete(anyLong());
+        // when & then
+        assertThatThrownBy(() -> privateService.deleteComment(String.valueOf(nonExistentCommentId)))
+                .isInstanceOf(NoSuchElementException.class);
+
+        // Verify the mock was called
+        verify(commentRepository).findById(nonExistentCommentId);
     }
 
 //    @Test
@@ -153,157 +244,177 @@ public class PrivateServiceTest {
 //    }
 
     @Test
+    @DisplayName("createPost should save post and return response when request is valid")
     void createPost_validRequest_shouldSavePostAndReturnResponse() {
+        // given
         CreatePostRequest request = new CreatePostRequest("New Post", "Content", "Summary", "Tech");
-        Category categoryEntity = new Category(1, request.getCategory(), 1, LocalDateTime.now());
 
-        Post savedPost = Post.builder()
+        Post expectedPost = Post.builder()
                 .id(1)
                 .title(request.getTitle())
                 .content(request.getContent())
                 .summary(request.getSummary())
-                .category(categoryEntity)
-                .createdAt(LocalDateTime.now())
-                .updatedAt(LocalDateTime.now())
+                .category(techCategory)
+                .createdAt(now)
+                .updatedAt(now)
                 .state("published")
                 .build();
 
-        PostResponse expectedResponse = new PostResponse(
-                savedPost.getId(),
-                savedPost.getTitle(),
-                savedPost.getContent(),
-                savedPost.getCreatedAt().toString(),
-                savedPost.getUpdatedAt().toString()
-        );
+        // Mock repository behavior
+        when(postRepository.insert(any(Post.class))).thenReturn(expectedPost);
 
-        given(categoryRepository.findById(anyInt())).willReturn(categoryEntity);
-        given(postRepository.insert(any(Post.class))).willReturn(savedPost);
+        // when
+        PostResponse result = privateService.createPost(request);
 
-        var result = privateService.createPost(request);
+        // then
+        // Verify response is not null and has expected values
+        assertThat(result)
+            .isNotNull()
+            .extracting("title", "content")
+            .containsExactly(
+                request.getTitle(),
+                request.getContent()
+            );
 
-        Assertions.assertNotNull(result);
-        Assertions.assertEquals(expectedResponse.getId(), result.getId());
-        Assertions.assertEquals(expectedResponse.getTitle(), result.getTitle());
-        Assertions.assertEquals(expectedResponse.getContent(), result.getContent());
-        Assertions.assertEquals(expectedResponse.getCreatedAt(), result.getCreatedAt());
-        Assertions.assertEquals(expectedResponse.getUpdatedAt(), result.getUpdatedAt());
-
-        verify(postRepository).insert(postCaptor.capture());
-        Post capturedPost = postCaptor.getValue();
-        Assertions.assertEquals(request.getTitle(), capturedPost.getTitle());
-        Assertions.assertEquals(request.getContent(), capturedPost.getContent());
-        Assertions.assertEquals(request.getSummary(), capturedPost.getSummary());
+        // Verify the mock was called
+        verify(postRepository).insert(any(Post.class));
     }
 
     @Test
+    @DisplayName("deletePost should delete post and related data when post exists")
     void deletePost_whenPostExists_shouldDeletePostAndRelatedData() {
+        // given
+        // Create a post
         int postId = 1;
-        Post existingPost = Post.builder()
+        Post post = Post.builder()
                 .id(postId)
-                .title("Test")
-                .content("Test")
-                .summary("Test")
-                .category(mock(Category.class))
+                .title("Test Title")
+                .content("Test Content")
+                .summary("Test Summary")
+                .category(techCategory)
                 .state("published")
                 .build();
 
-        given(postRepository.findById(postId)).willReturn(existingPost);
-        given(commentRepository.findAllByPost(existingPost)).willReturn(Collections.emptyList());
+        // Create a comment for the post
+        long commentId = 1L;
+        Comment comment = new Comment(commentId, post, "tester", "test comment", now);
+        List<Comment> comments = List.of(comment);
+
+        // Mock repository behavior
+        when(postRepository.findById(postId)).thenReturn(post);
+        when(commentRepository.findAllByPost(post)).thenReturn(comments);
+        doNothing().when(commentRepository).delete(commentId);
         doNothing().when(postRepository).delete(postId);
 
+        // when
         privateService.deletePost(postId);
 
+        // then
+        // Verify the mocks were called
         verify(postRepository).findById(postId);
-        verify(commentRepository).findAllByPost(existingPost);
+        verify(commentRepository).findAllByPost(post);
+        verify(commentRepository).delete(commentId);
         verify(postRepository).delete(postId);
     }
 
     @Test
+    @DisplayName("deletePost should throw PostNotFoundException when post does not exist")
     void deletePost_whenPostNotExists_shouldThrowPostNotFoundException() {
-        int postId = 999;
-        given(postRepository.findById(postId)).willReturn(null);
+        // given
+        int nonExistentPostId = 999;
 
-        Assertions.assertThrows(
-                PostNotFoundException.class,
-                () -> privateService.deletePost(postId)
-        );
+        // Mock repository behavior
+        when(postRepository.findById(nonExistentPostId)).thenReturn(null);
 
-        verify(postRepository).findById(postId);
-        verify(postRepository, never()).delete(anyInt());
-        verify(commentRepository, never()).findAllByPost(any());
+        // when & then
+        assertThatThrownBy(() -> privateService.deletePost(nonExistentPostId))
+                .isInstanceOf(PostNotFoundException.class);
+
+        // Verify the mock was called
+        verify(postRepository).findById(nonExistentPostId);
     }
 
     @Test
+    @DisplayName("updatePost should update post and return response when post exists")
     void updatePost_whenPostExists_shouldUpdatePostAndReturnResponse() {
+        // given
+        // Create a post
         int postId = 1;
-        UpdatePostRequest request = new UpdatePostRequest("Updated Title", "Updated Content", "Updated Summary", "Life");
-        Category originalCategory = new Category(1, "Tech", 1, LocalDateTime.now().minusDays(1));
-        Category newCategory = new Category(2, request.getCategory(), 2, LocalDateTime.now());
-        Post existingPost = Post.builder()
+        LocalDateTime originalUpdatedAt = now.minusHours(1);
+        Post post = Post.builder()
                 .id(postId)
                 .title("Original Title")
                 .content("Original Content")
                 .summary("Original Summary")
-                .category(originalCategory)
-                .createdAt(LocalDateTime.now().minusDays(1))
-                .updatedAt(LocalDateTime.now().minusDays(1))
+                .category(techCategory)
+                .createdAt(now.minusHours(2))
+                .updatedAt(originalUpdatedAt)
                 .state("published")
                 .build();
-        Post postAfterUpdate = Post.builder()
+
+        // Create update request
+        UpdatePostRequest request = new UpdatePostRequest(
+                "Updated Title",
+                "Updated Content",
+                "Updated Summary",
+                lifeCategory.getName()
+        );
+
+        // Create updated post
+        Post updatedPost = Post.builder()
                 .id(postId)
                 .title(request.getTitle())
                 .content(request.getContent())
                 .summary(request.getSummary())
-                .category(newCategory)
-                .createdAt(existingPost.getCreatedAt())
-                .updatedAt(LocalDateTime.now())
+                .category(lifeCategory)
+                .createdAt(post.getCreatedAt())
+                .updatedAt(now)
                 .state("published")
                 .build();
 
-        PostResponse expectedResponse = new PostResponse(
-                postAfterUpdate.getId(),
-                postAfterUpdate.getTitle(),
-                postAfterUpdate.getContent(),
-                postAfterUpdate.getCreatedAt().toString(),
-                postAfterUpdate.getUpdatedAt().toString()
-        );
+        // Mock repository behavior
+        when(postRepository.findById(postId)).thenReturn(post);
+        when(postRepository.update(any(Post.class))).thenReturn(updatedPost);
 
-        given(postRepository.findById(postId)).willReturn(existingPost);
-        given(categoryRepository.findById(anyInt())).willReturn(newCategory);
-        given(postRepository.update(any(Post.class))).willReturn(postAfterUpdate);
+        // when
+        PostResponse result = privateService.updatePost(postId, request);
 
-        var result = privateService.updatePost(postId, request);
+        // then
+        // Verify response
+        assertThat(result)
+            .isNotNull()
+            .extracting("id", "title", "content")
+            .containsExactly(
+                postId,
+                request.getTitle(),
+                request.getContent()
+            );
 
-        Assertions.assertNotNull(result);
-        Assertions.assertEquals(expectedResponse.getId(), result.getId());
-        Assertions.assertEquals(expectedResponse.getTitle(), result.getTitle());
-        Assertions.assertEquals(expectedResponse.getContent(), result.getContent());
-        Assertions.assertEquals(expectedResponse.getUpdatedAt(), result.getUpdatedAt());
-
+        // Verify the mocks were called
         verify(postRepository).findById(postId);
-        verify(categoryRepository).findById(anyInt());
-        verify(postRepository).update(postCaptor.capture());
-        Post capturedPost = postCaptor.getValue();
-        Assertions.assertEquals(postId, capturedPost.getId());
-        Assertions.assertEquals(request.getTitle(), capturedPost.getTitle());
-        Assertions.assertEquals(request.getContent(), capturedPost.getContent());
-        Assertions.assertEquals(request.getSummary(), capturedPost.getSummary());
-        Assertions.assertTrue(capturedPost.getUpdatedAt().isAfter(existingPost.getUpdatedAt()));
+        verify(postRepository).update(any(Post.class));
     }
 
     @Test
+    @DisplayName("updatePost should throw PostNotFoundException when post does not exist")
     void updatePost_whenPostNotExists_shouldThrowPostNotFoundException() {
-        int postId = 999;
-        UpdatePostRequest request = new UpdatePostRequest("Updated Title", "Updated Content", "Updated Summary", "Life");
-        given(postRepository.findById(postId)).willReturn(null);
-
-        Assertions.assertThrows(
-                PostNotFoundException.class,
-                () -> privateService.updatePost(postId, request)
+        // given
+        int nonExistentPostId = 999;
+        UpdatePostRequest request = new UpdatePostRequest(
+                "Updated Title", 
+                "Updated Content", 
+                "Updated Summary", 
+                "Life"
         );
 
-        verify(postRepository).findById(postId);
-        verify(postRepository, never()).update(any());
-        verify(categoryRepository, never()).findById(anyInt());
+        // Mock repository behavior
+        when(postRepository.findById(nonExistentPostId)).thenReturn(null);
+
+        // when & then
+        assertThatThrownBy(() -> privateService.updatePost(nonExistentPostId, request))
+                .isInstanceOf(PostNotFoundException.class);
+
+        // Verify the mock was called
+        verify(postRepository).findById(nonExistentPostId);
     }
 }
